# PulseScriptLang

./: CMakeLists.txt  README.md  main.PulseScript  main.cpp  package.json  pulsescript-0.0.1.vsix
include/: PulseInterpreter.h  PulseLexer.h  PulseParser.h  PulseScript.h  PulseScriptsManager.h  utilities.h
include/iterator/: iterator.h
include/vector/: vector.h
src/: PulseInterpreter.cpp  PulseLexer.cpp  PulseParser.cpp  PulseScript.cpp  PulseScriptsManager.cpp
themeVsCode/: pulsescript.tmLanguage.json
themeVsCode/syntaxe/: pulsescript.tmLanguage.json
themeVsCode/themes/: PulseTheme-color-theme.json
